--- a/personal/package.json
+++ b/personal/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-scroll": "^1.7.11",
+    "sass": "^1.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,6 +29,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
