--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal",
-  "homepage": "https://mfileman.github.io",
+  "homepage": "https://mfileman.github.io/madi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
